User edit page and little css improving...

--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/TopSection.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/TopSection.css
@@ -1,9 +1,22 @@
 @CHARSET "ISO-8859-1";
 
 .top-section{
-	
+	width: 800px;
+	height: 25px;
 }
 
 .menu-item{
 	float: left;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 4px;
+	padding-bottom: 4px;
+}
+
+.logout-item{
+	float: right;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 4px;
+	padding-bottom: 4px;
 }
