--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
@@ -5,9 +5,32 @@ body{
 	width:100%;
 }
 
+h1{
+	width: 100%;
+	margin-left: 10px;
+}
+
 .inner-body{
 	background-color:#FFFFFF;
 	width: 800px;
+	height: 100%;
 	margin-left: auto;
     margin-right: auto;
+}
+
+.edit-form{
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.field{
+	clear: both;
+	margin-left: 10px;
+}
+
+.description{
+}
+
+.submit-button{
+	float: right;
 }
