--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
@@ -1,7 +1,7 @@
 @CHARSET "ISO-8859-1";
 
 body{
-	background-color:#989898;
+	background-color:gray;
 	width:100%;
 }
 
@@ -11,11 +11,19 @@ h1{
 }
 
 .inner-body{
-	background-color:#FFFFFF;
+	background-color:white;
 	width: 800px;
 	height: 100%;
 	margin-left: auto;
     margin-right: auto;
+    
+    border-bottom-style: solid;
+    border-bottom-color: black;
+    border-bottom-width:5px;
+    
+    border-right-style: solid;
+    border-right-color: black;
+    border-right-width:5px;
 }
 
 .edit-form{
@@ -33,4 +41,8 @@ h1{
 
 .submit-button{
 	float: right;
+}
+
+div.content{
+	margin-left: 10px;
 }
