--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/TopSection.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/TopSection.css
@@ -1,3 +1,5 @@
+/*Contains styles needed by top-section.*/
+
 @CHARSET "ISO-8859-1";
 
 .top-section{
@@ -6,7 +8,7 @@
 }
 
 .menu-item{
-	float: left;
+	display: inline-block;
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 4px;
