--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
@@ -12,17 +12,17 @@ h1{
 .inner-body{
 	background-color:white;
 	width: 800px;
-	height: 100%;
 	margin-left: auto;
     margin-right: auto;
     
+    border-radius: 6px;
+    border-color: #282828;
+    
     border-bottom-style: solid;
-    border-bottom-color: black;
-    border-bottom-width:5px;
+    border-bottom-width: 5px;
     
     border-right-style: solid;
-    border-right-color: black;
-    border-right-width:5px;
+    border-right-width: 5px;
 }
 
 .edit-form{
