--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/NowPlayingBar.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/NowPlayingBar.css
@@ -2,5 +2,13 @@ div.now-playing-bar {
 	display: block;
 	clear: both;
 	margin-left: 5px;
+	margin-right: 5px;
 	margin-top: 5px;
+	
+	border-radius: 6px;
+	border: 4px solid #dcdcdc;
+}
+
+p.now-playing-bar-song-name{
+	margin: 4px;
 }
