--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
@@ -56,6 +56,7 @@ div.submit-box{
 
 div.content{
 	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .button{
@@ -88,4 +89,18 @@ div.content{
 .button:active {
 	position:relative;
 	top:1px;
+}
+
+div.info-box{
+	border-style:solid;
+	border-radius: 6px;
+	padding: 4px;
+	background-color:#99FFEB;
+}
+
+div.error-box{
+	border-style:solid;
+	border-radius: 6px;
+	padding: 4px;
+	background-color:#FFA3A3;
 }
