Added details view for playlist.

--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/Common.css
@@ -96,6 +96,8 @@ div.info-box{
 	border-radius: 6px;
 	padding: 4px;
 	background-color:#99FFEB;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 div.error-box{
@@ -103,4 +105,6 @@ div.error-box{
 	border-radius: 6px;
 	padding: 4px;
 	background-color:#FFA3A3;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
