--- a/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/NowPlayingBar.css
+++ b/LanPlaylistServer/src/main/resources/net/kokkeli/resources/css/NowPlayingBar.css
@@ -4,11 +4,11 @@ div.now-playing-bar {
 	margin-left: 5px;
 	margin-right: 5px;
 	margin-top: 5px;
-	
+	padding: 4px;
 	border-radius: 6px;
 	border: 4px solid #dcdcdc;
 }
 
-p.now-playing-bar-song-name{
+span.now-playing-bar-song-name{
 	margin: 4px;
 }
