--- a/LanPlayerClientSide/src/views/layout.jade
+++ b/LanPlayerClientSide/src/views/layout.jade
@@ -6,5 +6,7 @@ html(ng-app="clientSideLanPlayer")
         title Lan Player
         script(src='./js/angular/angular.js')
         script(src='./js/angular-route/angular-route.js')
+        script(src='./js/clientSideLanPlayer.js')
+        script(src='./js/angularConfig.js')
     body
         block body
