--- a/LanPlayerClientSide/src/views/users.jade
+++ b/LanPlayerClientSide/src/views/users.jade
@@ -1,7 +1,7 @@
 extends layout
 block body
     body(ng-controller="UserListCtrl")
-        h1 Jade - node template engine
+        h1 Users
         #container
             table(class="table table-bordered")
                 thead
