Navigation function added.

--- a/LanPlayerClientSide/src/views/user.jade
+++ b/LanPlayerClientSide/src/views/user.jade
@@ -1,7 +1,7 @@
 extends layout
 block body
     body(ng-controller="UserDetailsCtrl")
-        h1 User
+        +navigation('Users')
         #container
             form.form-horizontal
                 div.form-group
