--- a/LanPlayerClientSide/src/views/users.jade
+++ b/LanPlayerClientSide/src/views/users.jade
@@ -1,7 +1,7 @@
 extends layout
 block body
     body(ng-controller="UserListCtrl")
-        h1 Users
+        +navigation('Users')
         #container
             table.table.table-bordered
                 thead
