Status page added. Also moved controllers-scripts to layout.
Still having issues with navigation.

--- a/LanPlayerClientSide/src/views/layout.jade
+++ b/LanPlayerClientSide/src/views/layout.jade
@@ -15,5 +15,7 @@ html(ng-app="clientSideLanPlayer")
         script(src='./js/bootstrap/bootstrap.min.js')
         script(src='./js/clientSideLanPlayer.js')
         script(src='./js/angularConfig.js')
+        script(src='./js/controllers/userControllers.js')
+        script(src='./js/controllers/statusControllers.js')
     body.container
         block body
