--- a/LanPlayerClientSide/src/views/mixins.jade
+++ b/LanPlayerClientSide/src/views/mixins.jade
@@ -1,4 +1,6 @@
 mixin navigation(tab)
     ul.nav.nav-tabs
         li(role='presentation', class= tab === "Users" ? "active" : "")
-            a(href='#') Users
+            a(ng-href='/users') Users
+        li(role='presentation', class= tab === "Maintenance" ? "active" : "")
+            a(ng-href='/status') Maintenance
