--- a/LanPlayerClientSide/src/views/layout.jade
+++ b/LanPlayerClientSide/src/views/layout.jade
@@ -3,7 +3,7 @@ html(ng-app="clientSideLanPlayer")
     head
         meta(charset='utf8')
         meta(http-equiv="X-UA-Compatible", content="IE-edge")
-        meta(name="viewpoer", content="width=device-width, initial-scale=1")
+        meta(name="viewport", content="width=device-width, initial-scale=1")
         base(href='/')
         title Lan Player
         link(rel='stylesheet', href='./css/bootstrap/bootstrap.min.css')
@@ -16,6 +16,6 @@ html(ng-app="clientSideLanPlayer")
         script(src='./js/controllers/mainControllers.js')
         script(src='./js/controllers/userControllers.js')
         script(src='./js/controllers/statusControllers.js')
-    body
+    body.container
         div(ng-controller='MainCtrl')
             div(ng-view)
